Closed
Bug 257211
Opened 21 years ago
Closed 21 years ago
nsFormFillController::StartSearch leaks nsPasswordManager singleton
Categories
(Toolkit :: Form Manager, defect)
Toolkit
Form Manager
Tracking
()
RESOLVED
FIXED
People
(Reporter: dbaron, Assigned: dbaron)
Details
(Keywords: fixed-aviary1.0, memory-leak, Whiteboard: [patch])
Attachments
(1 file)
|
1.16 KB,
patch
|
bryner
:
review+
bryner
:
superreview+
asa
:
approval-aviary+
|
Details | Diff | Splinter Review |
nsFormFillController::StartSearch leaks the nsPasswordManager singleton. This
is ugly to fix because NS_GENERIC_FACTORY_SINGLETON_CONSTRUCTOR expects a
function returning a raw AddRef'd pointer. So I'll just fix it the ugly way, at
the call site. And there's no need to bother with NS_IF_RELEASE when we would
have crashed the line before given a null pointer.
Steps to reproduce:
* start Firefox
* click in the search box
* type Mozilla
* hit enter
* exit Firefox
| Assignee | ||
Comment 1•21 years ago
|
||
| Assignee | ||
Updated•21 years ago
|
| Assignee | ||
Updated•21 years ago
|
Whiteboard: [patch]
| Assignee | ||
Updated•21 years ago
|
Attachment #157234 -
Flags: superreview?(bryner)
Attachment #157234 -
Flags: review?(bryner)
Comment 2•21 years ago
|
||
Comment on attachment 157234 [details] [diff] [review]
patch
Can you instead change nsPasswordMangager::GetInstance to return
already_AddRefed<nsPasswordManager> and then use an nsCOMPtr in this code?
Updated•21 years ago
|
Attachment #157234 -
Flags: superreview?(bryner)
Attachment #157234 -
Flags: superreview+
Attachment #157234 -
Flags: review?(bryner)
Attachment #157234 -
Flags: review+
| Assignee | ||
Comment 3•21 years ago
|
||
Fix checked in to trunk, 2004-09-01 17:40 -0700.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
| Assignee | ||
Updated•21 years ago
|
Attachment #157234 -
Flags: approval-aviary?
Comment 4•21 years ago
|
||
Comment on attachment 157234 [details] [diff] [review]
patch
a=asa for branch checkin.
Attachment #157234 -
Flags: approval-aviary? → approval-aviary+
| Assignee | ||
Comment 5•21 years ago
|
||
Fix checked in to AVIARY_1_0_20040515_BRANCH, 2004-09-14 13:46 -0700.
Keywords: fixed-aviary1.0
Updated•17 years ago
|
Product: Firefox → Toolkit
You need to log in
before you can comment on or make changes to this bug.
Description
•