Fix leak of nsPasswordManager singleton.  b=257211  r+sr=bryner